fixed pokemon not showing error

--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,6 @@
   display: block;
   margin: 0 auto;
 }
+.pokemon {
+  width: 100px;
+}
